--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*
-Theme Name: ALA 2017
-Theme URI: https://github.com/AtlasOfLivingAustralia/ala-wordpress-theme
+Theme Name: BAS 2018
+Theme URI: https://github.com/bioatlas/bioatlas-wordpress-theme
 Author: Adam Atteia / Matt Andrews
 Author URI: https://www.ala.org.au/
-Description: Atlas of Living Australia 2017 theme.
-Version: 2.0
+Description: Biodiversity Atlas Sweden 2018 theme
+Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: bootstrap
-Text Domain: ala2017
+Text Domain: bas2018
 */
 
